# vedo-help

./: .ai-factory.json  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHECKLIST.md  Caddyfile  LICENSE  Makefile  README.md  aif-handoff-ui-kit.lib.pen  docker-compose.override.yml  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  lefthook.yml  otel-collector-config.yaml
.ai-factory/: ARCHITECTURE.md  DESCRIPTION.md  PLAN.md  ROADMAP.md  RULES.md
.ai-factory/evolutions/: 2026-06-19-00.00.md  2026-06-28-02.52.md  2026-07-10-16.02.md  patch-cursor.json
.ai-factory/patches/: 2026-06-16-15.00.md  2026-06-16-19.23.md  2026-06-17-01.52.md  2026-06-17-02.58.md  2026-06-18-00.50.md  2026-06-18-12.00.md  2026-06-18-14.58.md  2026-06-18-15.20.md  2026-06-18-19.20.md  2026-06-19-01.30.md  2026-06-19-01.45.md  2026-06-19-16.55.md  2026-06-21-02.40.md  2026-06-21-12.00.md  2026-06-21-13.05.md  2026-06-21-14.41.md  2026-06-21-14.55.md  2026-06-21-15.57.md  2026-06-21-16.15.md  2026-06-21-16.48.md  2026-06-23-09.40.md  2026-06-24-18.30.md  2026-06-26-16.48.md  2026-06-26-18.16.md  2026-06-28-02.52.md  2026-06-28-14.50.md  2026-06-28-19.53.md  2026-07-04-12.00.md  2026-07-04-19.46.md  2026-07-05-11.20.md  2026-07-05-14.15.md  2026-07-09-00.22.md  2026-07-10-00.24.md  2026-07-10-01.08.md  2026-07-10-01.18.md  2026-07-10-01.25.md  2026-07-10-10.28.md  2026-07-10-12.13.md  2026-07-10-16.02.md  2026-07-10-16.04.md  (+4 more)
.ai-factory/plans/: feature-bulk-document-deletion.md  feature-chat-ui-overhaul.md  feature-collection-management-admin-panel.md  feature-document-re-indexing.md  feature-git-repository-sync.md  feature-markdown-code-rendering.md  feature-postgresql-migration.md  feature-rag-assistant-full.md  feature-remove-api-key.md  feature-v031-chat-rework.md  feature-zip-batch-upload.md  fix-e2e-test-failures.md
.ai-factory/references/: INDEX.md  biome-lefthook-git-hooks.md  bm25-keyword-search.md  capn-rust-hooks.md  keycloak-configuration.md  opencode-go.md  opencode-zen.md  pencil-pen-format.md  (+7 more)
.github/: dependabot.yml
.playwright-mcp/: page-2026-06-14T08-24-36-862Z.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 00000000000001_create_collections.sql  00000000000002_create_documents.sql  00000000000003_create_chunks.sql  00000000000004_create_sessions.sql  00000000000005_create_messages.sql  00000000000006_add_session_pinned.sql  00000000000006_create_git_repositories.sql  00000000000007_add_message_edit_and_soft_delete.sql  00000000000008_add_message_edit_and_soft_delete.sql  00000000000009_add_debug_data.sql  00000000000010_add_user_id_to_collections.sql  00000000000011_add_user_id_to_entities.sql  00000000000011_create_audit_log.sql  00000000000013_add_source_to_documents.sql  00000000000014_add_user_name_to_sessions.sql  00000000000015_create_settings.sql  00000000000016_create_web_crawl_tables.sql  00000000000017_add_web_source_to_documents.sql  00000000000018_add_failed_status_to_web_crawl_pages.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/modules/: mod.rs
backend/src/modules/audit/: handlers.rs  models.rs  repository.rs  service.rs
backend/src/modules/auth/: handlers.rs  mod.rs  models.rs  service.rs  tests.rs
backend/src/modules/collections/: handlers.rs  models.rs  repository.rs  service.rs  tests.rs
backend/src/modules/conversations/: handlers.rs  models.rs  repository.rs  service.rs
backend/src/modules/documents/: handlers.rs  models.rs  reindex_tests.rs  repository.rs  service.rs
backend/src/modules/git_sync/: handlers.rs  models.rs  repository.rs  service.rs
backend/src/modules/query/: context_window.rs  debug_models.rs  handlers.rs  hybrid_service.rs  mod.rs  models.rs  query_enhancer.rs  repository.rs  rerank.rs  reranker.rs  service.rs
backend/src/modules/settings/: handlers.rs  models.rs  repository.rs  service.rs
backend/src/modules/web_crawl/: crawler.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs
backend/src/shared/: audit_middleware.rs  auth.rs  bm25.rs  chroma_client.rs  chunk_search.rs  chunking.rs  embedding_client.rs  error.rs  file_validation.rs  health.rs  llm.rs  mod.rs  notifications.rs  pricing.rs  rate_limit.rs  rbac.rs  response_cache.rs  security_headers.rs  types.rs  user_context.rs
backend/tests/: advanced_rag_integration.rs  auth_integration.rs  auth_middleware_test.rs  conversations_integration.rs  conversations_unit.rs  documents_db_unit.rs  git_sync_integration.rs  git_sync_unit.rs  health_integration.rs  health_unit.rs  integration.rs  multi_tenancy.rs  rag_pipeline.rs  web_crawl_integration.rs  web_crawl_unit.rs
backend/tests/common/: Dockerfile  mod.rs
design/: admin.pen  chat.pen  dialogs.pen  login.pen  ui-kit.lib.pen
docs/: api.md  architecture.md  auth.md  c4-architecture.md  configuration.md  deployment.md  getting-started.md  gui.md  monitoring.md  openapi.yaml  runbook.md  technical-specification-rag-system.md  testing.md  web-crawler.md
embedding/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt
embedding/src/: cache.py  main.py  models.py  service.py
embedding/tests/: conftest.py  test_main.py
embedding/typings/diskcache/: __init__.pyi
frontend/: .dockerignore  .npmrc  Dockerfile  biome.json  env.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
keycloak/: Dockerfile  docker-entrypoint.sh  realm-import.json  realm-import.json.template
load-tests/: load-test.js  options.js  smoke-test.js  soak-test.js  stress-test.js
prometheus/: prometheus.yml
scripts/: backup.sh  check-container-health.sh  fix-llm-prompt.ps1  init-db.sh  install-backup-timer.sh  restore.sh  run-backend-tests.sh  smoke-test-dns.sh  smoke-test.sh  validate-compose-ports.sh  validate-docker-compose.sh  validate-keycloak-template.sh  validate-migrations.sh
(+166 files in other folders)
