[package]
name = "vedo-backend"
version = "0.1.0"
edition = "2021"
description = "VEDO hub RAG Assistant — Backend API"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async trait support
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JWT validation
jsonwebtoken = "9"

# Async streaming
futures = "0.3"

# LRU cache for embeddings
lru = "0.12"
tokio-stream = "0.1"

# Environment (.env) file loading
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
thiserror = "1"

# OpenTelemetry
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
opentelemetry-http = "0.32"

# Rate limiting (simplified) — use tower_http limit layer

# Text splitting
text-splitter = "0.7"

# File parsing
pdf-extract = "0.7"
docx-rs = "0.3"
zip = "2"
csv = "1.3"
html2text = "0.6"
tiktoken-rs = "0.12"
git2 = "0.19"
walkdir = "2"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# On Windows, bundle OpenSSL to avoid runtime crashes in libgit2
# when system OpenSSL is missing or mismatched.
[target.'cfg(windows)'.dependencies]
git2 = { version = "0.19", features = ["vendored-openssl"] }

[dev-dependencies]
mockall = "0.12"
rstest = "0.18"
serial_test = "3"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "vedo_backend"
path = "src/lib.rs"
