[project]
name = "vedo-embedding"
version = "0.1.0"
description = "VEDO hub embedding service — text embedding via sentence-transformers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "typing-extensions>=4.12.0",
    "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "coverage>=7.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004"]
"typings/**/*.pyi" = ["ANN401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
